--- a/auth/package.json
+++ b/auth/package.json
@@ -7,12 +7,14 @@
     "test": "jest"
   },
   "dependencies": {
+    "firebase": "^5.2.0",
     "react": "16.4.1",
     "react-native": "0.56.0"
   },
   "devDependencies": {
     "babel-jest": "23.2.0",
     "babel-preset-react-native": "5.0.2",
+    "eslint-config-rallycoding": "^3.2.0",
     "jest": "23.3.0",
     "react-test-renderer": "16.4.1"
   },
